# LCT

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
configs/: .env.example  Database.py  Environment.py  MinioConfig.py
migrations/versions/: a66d4cf24df2_change_uniquie.py  ab9dec71acf3_remove_unique_path.py  bb27bb64fa94_add_datetime.py  cedd960a171f_add_minio.py
ml/: model.py
models/: MinioStorage.py  __init__.py
repositories/: Minio.py
routing/v1/: video.py
schemas/: Minio.py
services/: Minio.py
tasks/: worker.py
