[tool.poetry]
name = "LCT"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-03-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.18"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
pytest = "^7.4.0"
opencv-python = "^4.8.1.78"
imutils = "^0.5.4"
minio = "^7.1.17"
psycopg2-binary = "^2.9.9"
ultralytics = "^8.0.208"
python-ffmpeg-video-streaming = "^0.1.15"
ffmpeg-python = "^0.2.0"
boto3 = "^1.28.83"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
